# sudoku

./: Cargo.toml  README.md  techniques.md
benches/: benchmark.rs  generator_benches.rs  neo_solvers.rs  solver_benches.rs  techniques_benches.rs
src/: game.rs  generator.rs  grid.rs  judge.rs  lib.rs  main.rs  neo.rs  solver.rs  state.rs  techniques.rs  test.rs  ui.rs  utils.rs
src/game/: generator.rs  hint.rs  judge.rs  solver.rs  utils.rs
src/neo/: generator.rs  puzzle.rs  solver.rs  techniques.rs  test.rs  utils.rs
src/solver/: advanced.rs  basic.rs  naive.rs  stochastic.rs
src/state/: full_state.rs  simple_state.rs
src/techniques/: fish.rs  hidden_subsets.rs  locked_candidates.rs  naked_subsets.rs  singles.rs
