[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
default-run = "example"

[dependencies]
criterion = "0.5.1"
rand = "0.8.5"
itertools = "0.13.0"

[[bench]]
name = "solver_benches"
harness = false

[[bench]]
name = "generator_benches"
harness = false

[[bench]]
name = "techniques_benches"
harness = false

[[bin]]
name = "example"
test = false
bench = false